--- a/css/style.css
+++ b/css/style.css
@@ -347,8 +347,12 @@ ul {
 
 .search {
     width: 100%;
+    height: 48px;
     display: flex;
     margin-top: 68px;
+}
+.search-group {
+    flex-grow: 1;
 }
 .visually-hidden {
     width: 1px;
@@ -357,16 +361,17 @@ ul {
     position: absolute;
 }
 .search-field {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     border: none;
     background-color: #f4f7f6;
     color:#000000;
-    width: 222px;
-    height: 48px;
+    width: 100%;
+    height: 100%;
     padding-left: 19px;
-    font-size: 13px;
+    font-size: 0.8rem;
     line-height: 40px;
     opacity: 0.54;
+    flex-grow: 1;
 }
 .search-field:focus {
     border: 1px solid #B59F5B;
@@ -376,13 +381,14 @@ button {
 }
 .search-button {
     width: 48px;
-    height: 48px;
     background-color: #B59F5B;
     background-image: url(../svg/search.svg);
     background-repeat: no-repeat;
     background-position: center;
     border: none;
     background-size: 18px;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 .search-button:hover {
     background-color: #323232;
@@ -993,6 +999,7 @@ button {
           width: 270px;
       }
       .checkbox {
+        display: block;
           position: absolute;
           top: 30px;
           right: 16px;
@@ -1029,7 +1036,7 @@ button {
       }
       .checkbox:checked ~ .menu-list {
           display: flex;
-          
+          flex-wrap: wrap;
       }
       .menu {
           flex-wrap: wrap;
@@ -1095,21 +1102,29 @@ button {
       /* //основная страница */
       .page-wrapper {
           flex-wrap: wrap;
+          margin: 0 14px 0;
+          padding: 0;
       }
       .main {
           margin-bottom: 66px;
+          padding-left: 0;
+          width: 100%;
       }
       .news{
           flex-wrap: wrap;
-          padding-left: 14px;
+          /* padding-left: 14px; */
           padding-top: 4px;
       }
       .news:not(:last-child) {
           margin-bottom: 56px ;
       }
       .news-img {
-        width: 328px;
+        width: 100%;
         height: 253px;
+        padding-left: 0;
+      }
+      .news-text {
+        margin-left: 0;
       }
       .news-tags {
           padding-top: 12px;
@@ -1132,16 +1147,18 @@ button {
       .news-text-about {
           font-size: 0.8rem;
           line-height: 20px;
-          padding-right: 50px;
+          /* padding-right: 50px; */
       }
       .news-text-about > p:not(:first-child) {
           margin-top: 10px;
       }
       .aside {
-         
+         margin: 0;
+         padding: 0;
+         max-width: 100%;
       }
       .aside-item {
-          padding-left: 13px;
+          /* padding-left: 13px; */
       }
       .new-posts-top {
           font-size: 1rem;
@@ -1151,14 +1168,14 @@ button {
           margin: 10px auto 22px;
       }
       .search {
-          width: calc(100% - 14px);
+          width: 100%;
       }
       .search-group {
           width: 100% ;
       }
       .search-field {
-          width: 100%;
-          height: 48px;
+          
+          /* height: 48px; */
       }
       /* рассылка */
       .aside-item-mailing {
@@ -1170,12 +1187,7 @@ button {
       .mailing-top::after {
           margin: 12px auto 22px;
       }
-      .mailing-field {
-          width: calc(100% - 28px);
-      }
-      .mailing-button {
-          width: calc(100% - 28px);
-      }
+     
       /* теги */
       .aside-item-tags {
           margin-top: 42px;
@@ -1191,9 +1203,12 @@ button {
           margin: 42px 0 42px;
       }
       .themes-list {
-          padding-left: 14px;
+          /* padding-left: 14px; */
       }
       /* /изделия/ */
+      .chapter-goods {
+        margin: 0 14px;
+      }
       .chapter-goods__title {
           font-size: 1rem;
       }
@@ -1212,11 +1227,13 @@ button {
           justify-content: center;
           width: 100%;
           margin-bottom: 20px;
+          padding-left: 0px;
       }
       .goods-item__border {
           margin-top: -62px;
           width: 324px;
           padding-bottom: 28px;
+          margin-left: 0;
       }
       .goods-item__content {
           padding-left: 16px;
