--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   position: relative;
   z-index: 0;
   padding: 28px 0 133px;
-  margin-bottom: 60px;
+  margin-bottom: 58px;
 }
 .header::after {
     content: "";
@@ -51,7 +51,7 @@ body {
     padding: 0 16px;
 }
 .header-logo-img {
-    width: 170px;
+    width: 180px;
 }
 .checkbox {
     display: none;
@@ -115,18 +115,23 @@ ul {
        height: 0.2rem;
        background-color: #E1D9BD;
    }
+   .trend {
+        display: flex;
+        gap: 4px;
+    }
    .trend-post {
-       display: flex;
-       align-items: flex-end;
-       width: 25%;
-       height: 19vw;
-       background-repeat: no-repeat;
-       background-position: center;
-       background-size:cover;
-       position: relative;
-       z-index: 0;
-       justify-content: center;
-   }
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        width: 25%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        z-index: 0;
+        padding: 134px 24px 16px;
+        box-sizing: border-box;
+    }
    .trend-post::after {
        content: "";
        position: absolute;
@@ -140,11 +145,8 @@ ul {
    }
    .trend-main {
        outline: 3px solid #b59f5b;
-       width: 88%;
        justify-content: center;
-       margin-bottom: 17px;
-       padding: 30px 40px 29px 34px;
-       box-sizing: border-box;
+       padding: 20px 58px 29px 34px;
    }
    .trend-tag {
        display: flex;
@@ -170,11 +172,6 @@ ul {
    .treand-title-link:hover {
        color: #b59f5b;
    }
-   .trend {
-       display: flex;
-       flex-wrap: nowrap;
-       gap: 4px;
-   }
    .trend-garden {
        background-image: url("../images/trend1.jpg") ;
    }
@@ -192,9 +189,8 @@ ul {
 .page-wrapper {
     max-width: 1200px;
     margin: 0 auto 56px;
-    /* padding: 0 20px; */
     display: flex;
-    padding-left: 30px;
+    padding: 0 30px;
 }
 .main {
     width: 66%;
@@ -760,7 +756,7 @@ button {
     width: 100%;
     margin-bottom: 6px;
 }
-.label-radio {
+.label-radio:not(:last-child) {
     margin-right: 14px;
 }
 .radio-malling-text{
@@ -832,47 +828,49 @@ button {
     }
     .header {
         background-image: url(../images/banner-bg-tablet.jpg);
-        background-position: center center;
-        margin-bottom: 47px;
-        padding-bottom: 108px;
+        padding: 42px 0 116px;
+        margin-bottom: 44px;
     }
-    .header-logo {
-        width: 20.8vw;
-        margin-top: 12px;
-        margin-left: 16px
+    .header-wrapper {
+        padding: 0 34px;
+    }
+    .header-logo-img {
+        width: 160px;
     }
     .header-title {
         font-size: 2.6rem;
-        margin: 90px 64px 0;
+        /* margin: 90px 64px 0; */
+        margin: 86px auto 0;
+    }
+    .header-menu {
+        display: flex;
+        flex-direction: row-reverse;
     }
     .menu-list {
         display: none;
     }
     .checkbox {
-        position: absolute;
-        top: 6.5vw;
-        right: 4.5vw;
-        width: 25px;
-        height: 25px;
+        width: 24px;
+        height: 24px;
         cursor: pointer;
-        border: 2px solid red;
         display: block;
+        position: relative;
+        z-index: -1;
+        left: 22px;
+        margin-left: 10px;
         opacity: 0;
     }
     .menu-btn {
-        position: absolute;
-        justify-content: center;
-        top: 7.9vw;
-        right: 4.6vw;
+        display: flex;
+        align-items: center;
         cursor: pointer;
-        z-index: 1;
-        width: 20px;
+        width: 22px;
     }
     .menu-btn > span,
     .menu-btn > span::before,
     .menu-btn > span::after {
       display: block;
-      position: absolute;
+      position: relative;
       width: 100%;
       height: 2px;
       background-color: #fff;
@@ -887,8 +885,6 @@ button {
     }
     .checkbox:checked ~ .menu-list {
         display: flex;
-        margin-top: 1.5vw;
-        margin-right: 9.6vw;
     }
     
     .header-title {
@@ -899,16 +895,21 @@ button {
         font-size: 1.1rem;
     }
     .trend-wrapper {
-        margin-bottom: 38px;
+        margin-bottom: 44px;
+    }
+    .trend-header::after {
+        margin: 12px auto 18px;
     }
     .trend {
-        display: flex;
         flex-wrap: wrap;
-        gap: 2px;
     }
     .trend-post {
         width: calc(50% - 2px);
-        height: 32vw;
+        padding: 72px 22px 16px;
+        height: 246px;
+    }
+    .trend-main {
+        padding: 20px 58px 29px 34px;
     }
     .treand-title-link {
         font-size: 1rem;
@@ -966,8 +967,9 @@ button {
         margin-top: 5px;
     }
     .goods {
+        padding: 0 30px;
         flex-wrap: wrap;
-        gap: 26px;
+        gap: 76px;
         margin-bottom: 25px;
     }
     .goods-item {
@@ -976,8 +978,6 @@ button {
         box-sizing: border-box;
     }
     .goods-item__img {
-        padding: 0;
-        margin-left: 36px;
         width: 292px;
         height: 226px;
     }
@@ -990,20 +990,44 @@ button {
     .goods-item__border {
         width: 330px;
     }
+    .footer {
+        padding: 0 30px;
+    }
     .social {
         margin-bottom: 45px;
+    }
+    .popup {
+        visibility:visible;
+    }
+    .popup-btn-close{
+        top:-36px;
+    }
+    .btn-close {
+        width: 27px;
+        height: 27px;
+    }
+    .label-radio:not(:last-child) {
+        margin-right: 24px;
+    }
+    .radio-malling-text {
+        font-size: 0.9rem;
+    }
+    .radio-malling-text::before {
+        width: 23px;
+        height: 23px;
+        background-size: 23px;
     }
 }
 /*  mobile */
 @media (max-width:640px) {
     .header {
         padding-top: 30px;
-        height: 640px;
         margin-bottom: 39px;
+        padding: 28px 0 214px;
       }
       .header-wrapper {
-          /* max-width: 100%; */
-          width: 100%;
+        /* max-width: 100%; */
+        width: 100%;
       }
       .header-logo{
           margin: 0 auto;
@@ -1013,12 +1037,12 @@ button {
       }
       .checkbox {
         display: block;
-          position: absolute;
-          top: 30px;
-          right: 16px;
-          width: 23px;
-          height: 23px;
-          opacity: 0;
+        position: absolute;
+        top: 30px;
+        right: 16px;
+        width: 23px;
+        height: 23px;
+        opacity: 0;
       
       }
       .menu-btn {
@@ -1056,10 +1080,10 @@ button {
       }
       .header-menu {
           order: -1;
-          margin-bottom: 168px;
+          margin-bottom: 92px;
           height: 30px;
           box-sizing: border-box;
-          width: 100vw;
+          width: 100%;
       }
       .menu-list {
          display: none;
@@ -1082,16 +1106,14 @@ button {
          }
 
          .trend-post {
-             flex-wrap: wrap;
-             width: 100%;
-             height: 230px;
+            flex-wrap: wrap;
+            width: 100%;
+            padding: 94px 18px 16px;
+            /* height: 230px; */
+             
          }
          .trend-main {
-             width: 90%;
-             margin-bottom: 17px;
-             padding-bottom: 10px;
-             padding-left: 20px;
-             padding-right: 40px;
+             padding: 20px 21px 26px;
          }
          .trend-tag {
              margin-top: 23px;
@@ -1216,9 +1238,6 @@ button {
           /* padding-left: 14px; */
       }
       /* /изделия/ */
-      .chapter-goods {
-        margin: 0 14px;
-      }
       .chapter-goods__title {
           font-size: 1rem;
       }
